# Auto-Ludii-Fighter

./: .gitignore  auto_clicker.py  beta.py  config.ini  coord_check.py  internet_checker.py  log_reader.py  model_list_reader.py  mouse_tracker.py  ocr_example.py  pyproject.toml
